# python-storage-clients

./: .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  tox.ini
.dependabot/: config.yml
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
doc/source/: conf.py  index.rst
doc/source/pages/: debug.rst  installation.rst  primera.rst  storeonce3.rst  storeonce4.rst  storeserv.rst  xp.rst
hpestorapi/: __init__.py  base.py  exceptions.py  interface.py  primera.py  storeonce3.py  storeonce3_utils.py  storeonce4.py  storeserv.py  tracer.py  xp.py
requirements/: development.txt
test/: __init__.py  test-storeserv.py  test_storeonce3.py  test_storeonce4.py  test_storeserv.py
test/storeonce3/: Dockerfile
test/storeonce3/app/: restserver.py
test/storeserv/: Dockerfile  restserver.py
test/storeserv/app/: requirements.txt  restserver.py
test/storeserv/app/resources/: common.py  credentials.py  hosts.py  system-get.json  system.py
test/storeserv/resources/: credentials.py
