[metadata]
author = Hewlett Packard Enterprise Development
author-email = ivan.smirnov@hpe.com
maintainer = Ivan Smirnov
maintainer_email = ivan.smirnov@hpe.com
home-page = https://github.com/HewlettPackard/python-storage-clients
description = Python library that provides very simple way to use Rest API services for HPE storage and disk backup devices
long-description = file: README.rst
license = Apache License, Version 2.0
license_file = LICENSE.txt
keywords =
    HPE
    REST
    StoreOnce
    3PAR
    Primera
    XP7
    P9500
    Storage array
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = True
python_requires = >=3.6, <4
install_requires =
    requests >= 2.19.1, <3

[flake8]
ignore = RST303
max-complexity = 10
max-line-length = 100
exclude = doc/source/conf.py, test